🐞 Fix unexpected button style on mobile devices

--- a/components/button/Styles.module.css
+++ b/components/button/Styles.module.css
@@ -12,4 +12,5 @@
     height: 50px;
     font-size: 20px;
     border-radius: 25%;
+    padding: 0;
 }
